syntax = "proto3";

option go_package = "relay/internal/proto";

import "types.proto";
import "latency_tracker.proto";

package proto;

message ProtoMessageBase {
  string payload_type = 1;
  ProtoLatencyTracker latency = 2;
}

message ProtoMessageInput {
    ProtoMessageBase message_base = 1;
    ProtoInput data = 2;
}
